ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port:
                number: 8000

# curl -H "Host: arch.homework" http://localhost/health
